tests/snapshots/parser_snapshots__call_with_args.snap
---
source: tests/parser_snapshots.rs
expression: ast
---
Call {
    callee: Identifier(
        "calculate",
    ),
    arguments: [
        IntLiteral(
            10,
        ),
        FloatLiteral(
            20.5,
        ),
    ],
}
