tests/snapshots/parser_snapshots__mixed_expression.snap
---
source: tests/parser_snapshots.rs
expression: ast
---
Binary {
    left: Call {
        callee: Identifier(
            "foo",
        ),
        arguments: [
            Identifier(
                "x",
            ),
        ],
    },
    op: Plus,
    right: Binary {
        left: Call {
            callee: Identifier(
                "bar",
            ),
            arguments: [
                Identifier(
                    "y",
                ),
            ],
        },
        op: Multiply,
        right: IntLiteral(
            10,
        ),
    },
}
