tests/snapshots/parser_snapshots__simple_call.snap
---
source: tests/parser_snapshots.rs
expression: ast
---
Call {
    callee: Identifier(
        "foo",
    ),
    arguments: [],
}
